tests/snapshots/e2e_tail__e2e_tail_mixed_arrays_json__pseudo__n200.snap
---
source: tests/e2e_tail.rs
expression: stdout
---
{
  "matrix": [
    …,
    [
      …,
      9
    ]
  ],
  "strings": [
    …,
    "s…"
  ],
  "objects": [
    …,
    {
      "k": "…"
    }
  ],
  "deep": [
    …,
    { … }
  ]
}
