tests/snapshots/e2e_tail__e2e_tail_mixed_arrays_json__pseudo__n30.snap
---
source: tests/e2e_tail.rs
expression: stdout
---
{
  "deep": [
    …,
    {
      "a": [
        {
          "b": [ … ]
        }
      ]
    }
  ],
  "matrix": [
    …,
    [
      …,
      9
    ]
  ],
  "objects": [
    …,
    {
      "k": "v3"
    }
  ],
  "strings": [
    …,
    "seven"
  ]
}
